fixed navbars for buyer and sellers, fixed re-sized reposiveness, fixed home navbar margin issue , fixed button behind sections

--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -2,7 +2,7 @@
 
 body , html {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  margin: 0 100px 0 100px;
+  margin: 0 100px 0 100px !important;
   -webkit-touch-callout: none;
   -webkit-text-size-adjust: none;
   -webkit-user-select: node;
@@ -11,6 +11,11 @@ body , html {
 
 }
 
+@media screen and (max-width: 600px) {
+  body, html{
+    margin: 0 2px !important;
+  }
+}
 
 
 
