--- a/angular-src/src/app/components/navbar/seller-navbar/seller-navbar.component.css
+++ b/angular-src/src/app/components/navbar/seller-navbar/seller-navbar.component.css
@@ -1,33 +1,32 @@
+
+
 /*.navbar-brand{
     max-height: 30px;
     max-width: 30%;
     overflow: visible;
     padding: 0;
-  
+
   }
-  
+
   .logForm {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
   }
-  
+
   .nav-item2 {
     float: left;
     list-style-type: none;
     font-size: 14px;
     padding-top: 0;
   }
-  
+
   .nav-item2 a:hover {
     background-color: lightgray;
   }
 */
-  .navbar-nav > li{
-    padding-left:10px;
-    padding-right:10px;
-  }
+
 
   .img-circle {
     border-radius: 50%;
